@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Added a new "ttype" parameter on the verifyTool method so that in addition to
+  the meta_type the check may be done on the type of the object too.
 Bug fixes:
 ~~~~~~~~~~
 -
